<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <item
        android:id="@+id/share_app"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share" />

    <item
        android:id="@+id/open_in_browser"
        android:icon="@drawable/ic_web_asset_white_36dp"
        android:orderInCategory="100"
        android:title="Open in Browser"
        app:showAsAction="always" />
    <item
        android:id="@+id/show_btns_btn"
        android:checkable="true"
        android:orderInCategory="101"
        android:title="@string/Hide_But"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_btn"
        android:icon="?attr/actionModeCopyDrawable"
        android:title="@string/copylink"
        app:showAsAction="always" />
    <item
        android:id="@+id/show_url_btn"
        android:checkable="true"
        android:iconTintMode="src_over"
        android:orderInCategory="102"
        android:title="@string/Show_Url"
        app:showAsAction="never" />

</menu>
