<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".StartActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/textView3"
            android:paddingBottom="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/dark_purple_800"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/amber_500"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="fill">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/search" />
            </RelativeLayout>

            <Button
                android:id="@+id/createA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginA"
                android:layout_margin="10dp"
                android:background="@drawable/my_btn_tow"
                android:text="@string/createacount"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/amber_50"
                android:textStyle="bold" />

            <Button
                android:id="@+id/loginA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/mubtn"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/amber_50"
                android:textStyle="bold" />

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="5dp"-->
            <!--android:orientation="horizontal">-->


            <!--<com.google.android.gms.common.SignInButton-->
            <!--android:id="@+id/sign_in_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_margin="5dp"-->
            <!--android:layout_weight="1" />-->

            <!--<Button-->
            <!--android:id="@+id/button3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="5dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="Button" />-->

            <!--<Button-->
            <!--android:id="@+id/button2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="5dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="Button" />-->
            <!--</LinearLayout>-->

            <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="5dp"-->
            <!--android:background="@color/dark_purple_500">-->

            <!--<Button-->
            <!--android:id="@+id/skip"-->
            <!--style="@style/Widget.AppCompat.Button.Borderless"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Skip"-->
            <!--android:textAlignment="center"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/amber_50"-->
            <!--/>-->

            <!--</RelativeLayout>-->


        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
